syntax = "proto3";

option go_package = "./;mailer";
package mailer;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

message UserProfileResponse {
    google.protobuf.StringValue user_name = 1;
    string nick_name = 2;
    google.protobuf.StringValue description = 3;
    google.protobuf.Timestamp birth_time = 4;
    google.protobuf.StringValue gender = 5;
    google.protobuf.StringValue avatar_url = 6;
}

message MessageInfo {
    uint64 id = 1;
    uint64 sender_id = 2;
    uint64 chat_id = 3;
    string content = 4;
    google.protobuf.Timestamp created_at = 5;
}

message Message {
    uint64 sender_id = 1;
    uint64 chat_id = 2;
    string content = 3;
    google.protobuf.Timestamp created_at = 4;
}

message MessageList {
    repeated MessageInfo messages = 1;
}

message ChatInfo {
    uint64 chat_id = 1;
    UserProfileResponse companion = 2;
}

message ChatList {
    repeated ChatInfo chats = 1;
}

message User {
    uint64 id = 1;
}

message ChatCreateRequest {
	uint64 user_id = 1;
	uint64 companion_id = 2;
}

message ChatRequest {
    uint64 chat_id = 1;
}

message UserList {
    repeated User users = 1;
}

service ChatService {
    rpc GetUserChats(User) returns (ChatList);
    rpc CreateChat(ChatCreateRequest) returns (ChatInfo);
    rpc GetAllChatMessages(ChatRequest) returns (MessageList);
    rpc GetChatUsers(ChatRequest) returns (UserList);
    rpc AddChatMessage(Message) returns (MessageInfo);
}